--- a/module_views/src/main/res/values/strings.xml
+++ b/module_views/src/main/res/values/strings.xml
@@ -17,6 +17,8 @@
     <string name="pattern_lock_fragment">滑动解锁九宫格控件</string>
     <string name="particle_lines_fragment">粒子线条控件</string>
 
+    <string name="airplane_fight_fragment">飞机大战</string>
+
     <string name="test_string">一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n</string>
     <string name="test_long_string">
         一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n
