完成弹球游戏开发

--- a/module_views/src/main/res/values/strings.xml
+++ b/module_views/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <string name="airplane_fight_fragment">飞机大战</string>
     <string name="snark_game_fragment">飞机大战</string>
+    <string name="bomb_ball_game_fragment">飞机大战</string>
 
     <string name="test_string">一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n</string>
     <string name="test_long_string">
