新增飞机大战文档

--- a/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：飞机大战.md
+++ b/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：飞机大战.md
@@ -1,5 +1,22 @@
-package com.silencefly96.module_views.game
+# 安卓小游戏：飞机大战
 
+### 前言
+前面写了十二篇自定义view的博客，说实话写的还是有点无聊了，最近调整了一下，觉得还是要对开发有热情，就写了点小游戏，现在抽时间把博客也写一写，希望读者喜欢。
+
+## 需求
+这里就是飞机大战啊，很多人小时候都玩过，我这也比较简单还原了一下。核心思想如下：
+- 1，载入界面配置，设置游戏信息
+- 2，载入精灵配置，获取飞机、子弹、敌人掩图
+- 3，启动手势控制逻辑
+- 4，启动游戏controller，定时刷新处理逻辑
+
+## 效果图
+效果图还阔以吧，就是掩图马虎了，直接再Android Studio里面找的vector的image，玩起来还是有点小时候的感觉。
+
+![airplane](https://img-blog.csdnimg.cn/40196f884b0544e5b3181b538d317ab6.gif#pic_center)
+
+## 代码
+```java
 import android.annotation.SuppressLint
 import android.app.AlertDialog
 import android.content.Context
@@ -363,3 +380,71 @@ class AirplaneFightGameView @JvmOverloads constructor(
         mGameController.removeMessages(0)
     }
 }
+```
+对应style配置
+> res -> values -> airplane_fight_game_view_style.xml
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <declare-styleable name ="AirplaneFightGameView">
+        <attr name="liveSize" format="integer"/>
+        <attr name="airplane" format="reference"/>
+        <attr name="bullet" format="reference"/>
+        <attr name="enemy" format="reference"/>
+    </declare-styleable>
+</resources>
+```
+三个掩图也给一下吧,当然你找点好看的图片代替下会更好！
+> res -> drawable -> ic_airplane.xml
+```xml
+<vector android:height="24dp" android:tint="#01A5FD"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M22,16v-2l-8.5,-5V3.5C13.5,2.67 12.83,2 12,2s-1.5,0.67 -1.5,1.5V9L2,14v2l8.5,-2.5V19L8,20.5L8,22l4,-1l4,1l0,-1.5L13.5,19v-5.5L22,16z"/>
+</vector>
+```
+> res -> drawable -> ic_bullet.xml
+```xml
+<vector android:height="24dp" android:tint="#6F6A6A"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M12,8l-6,6 1.41,1.41L12,10.83l4.59,4.58L18,14z"/>
+</vector>
+```
+> res -> drawable -> ic_enemy.xml
+```xml
+<vector android:height="24dp" android:tint="#DB172F"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M5,16c0,3.87 3.13,7 7,7s7,-3.13 7,-7v-4L5,12v4zM16.12,4.37l2.1,-2.1 -0.82,-0.83 -2.3,2.31C14.16,3.28 13.12,3 12,3s-2.16,0.28 -3.09,0.75L6.6,1.44l-0.82,0.83 2.1,2.1C6.14,5.64 5,7.68 5,10v1h14v-1c0,-2.32 -1.14,-4.36 -2.88,-5.63zM9,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1zM15,9c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1 1,0.45 1,1 -0.45,1 -1,1z"/>
+</vector>
+```
+
+## 主要问题
+下面简单讲讲吧。
+
+### 资源加载
+这里用了styleable来配置游戏所需的资源，关于styleable我前面转载了一篇博文，别人写的很好，我就不再赘述。在init函数里面加载了生命值和掩图的资源id，注意这里没对id验证，如果没有设置或者设置不对可能会闪退，但是我这小游戏你不设置也没必要玩。。
+
+### 掩图加载
+这里我需要通过资源id拿到掩图资源，并转化为bitmap，这里踩了挺多坑。首先我是通过BitmapFactory对拿到的resourceId直接decode，结果拿到的bitmap为空，为此我还调试了一下，也不好确定原因，原因在后面也出现了，就是我这用的是vector的资源，并不能转换为BitmapDrawable，拿不到bitmap。后面还试了拿到Drawable，强制转换成BitmapDrawable拿到bitmap，也是不行，转成VectorDrawable需要改最低的api，最后还是借助canvas拿到的bitmap。
+
+### 加载游戏
+我这里是在onSizeChanged里面开始的，onSizeChanged会在第一次onMeasure后调用（前提是尺寸不发生变化），这里可以拿到控件宽高，正好对游戏进行一些配置，并发送空消息给handler，开启定时刷新。
+
+### 游戏逻辑
+onSizeChanged后开启定时刷新，游戏逻辑写在handler里就可以了，还可以根据刷新频率稍微控制下飞机、子弹、敌人的频率，我这里用了很多控制变量，当然小游戏可以这么写，复杂点的还是整理下吧。
+
+游戏逻辑无非就是移动、碰撞、死亡几个，很简单，看代码就行，不多讲。这里稍稍注意下对列表数据的移除，我这里写的也不是很好，应该用iterator去移除的。
+
+### 飞机移动逻辑
+这里飞机移动逻辑和游戏逻辑分离了，直接在onTouchEvent中移动飞机，并通过invalidate刷新。飞机移动就没有必要和游戏刷新频率有关了吧，直接invalidate看起来舒服点。
+
+### 画面绘制
+画面绘制没得说，只要把飞机、子弹、敌人绘制出来就行了，逻辑和绘制分离。一开始我还想着又怎么移动，又怎么绘制，使用动画移动子弹什么的，太复杂了，反而不现实。
+
+### 资源回收
+这里用到了bitmap，最好要做下bitmap的回收。
+
+### 想法的失误
+一开始我是想把飞机、子弹、敌人当成控件，游戏当成viewgroup的，然后对控件进行操作，面向对象嘛，也许有道理，但是为什么不直接使用ondraw进行绘制，性能都更好一些。
