新增贪吃蛇文档

--- a/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：贪吃蛇.md
+++ b/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：贪吃蛇.md
@@ -1,5 +1,21 @@
-package com.silencefly96.module_views.game
+# 安卓小游戏：贪吃蛇
 
+### 前言
+这个是通过自定义View实现小游戏的第二篇，实际上第一篇做起来麻烦点，后面的基本就是照葫芦画瓢了，只要设计下游戏逻辑就行了，技术上不难，想法比较重要。
+
+## 需求
+贪吃蛇，太经典了，小时候在诺基亚上玩了不知道多少回，游戏也很简单，就两个逻辑，一个是吃东西变长，一个是吃到自己死亡。核心思想如下：
+- 1，载入配置，读取游戏信息及掩图
+- 2，启动游戏控制逻辑
+- 3，手势控制切换方向
+
+## 效果图
+这里就稍微演示了一下，就这速度，要演示到死亡估计得一分钟以上了，掩图用的比较low，勉强凑合。
+
+![snark](https://img-blog.csdnimg.cn/e1e81d327dbf4fdb8e02304e12b1ff58.gif#pic_center)
+
+## 代码
+```java
 import android.annotation.SuppressLint
 import android.app.AlertDialog
 import android.content.Context
@@ -20,10 +36,6 @@ import kotlin.math.abs
 
 /**
  * 贪吃蛇游戏view
- *
- * 1，载入配置，读取游戏信息及掩图
- * 2，启动游戏控制逻辑
- * 3，手势控制切换方向
  *
  * @author silence
  * @date 2023-02-07
@@ -345,3 +357,43 @@ class SnarkGameView @JvmOverloads constructor(
     data class Food(var posX: Int, var posY: Int, var counter: Int, var blingCounter: Int, var show: Boolean)
     data class Snark(var posX: Int, var posY: Int, var dir: Int, var next: Snark? = null)
 }
+```
+对应style配置
+> res -> values -> snark_game_view_style.xml
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <declare-styleable name ="SnarkGameView">
+        <attr name="rowNumb" format="integer"/>
+        <attr name="colNumb" format="integer"/>
+        <attr name="node" format="reference"/>
+    </declare-styleable>
+</resources>
+```
+蛇体掩图也给一下吧,当然你找点好看的图片代替下会更好！
+> res -> drawable -> ic_node.xml
+```xml
+<vector android:height="24dp" android:tint="#6F6A6A"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+</vector>
+```
+
+## 主要问题
+下面简单讲讲吧，大部分还是和上一篇的飞机大战类似，这里就讲讲不一样的或者做点补充吧。
+
+### 资源加载
+资源加载就是从styleable配置里面读取设置，这里贪吃蛇是完全网格化的游戏，这里读取了行数和列数，后面把屏幕等分，获取到了行高和列长，转换逻辑得注意下。蛇的掩图逻辑和上一篇博文一致，不细说了。
+
+### 蛇体移动
+蛇体的移动实际就要有一个方向，这里每一截蛇都是一个节点，构成了一个链表，每个节点的方向都是移动前上一个节点的方向，这样移动起来就有效果了。当然方向的获取也简单，在onTouchEvent中监听DOWN和UP事件就行了，比较起点和终点，看看往哪边滑动的，更改蛇头方向就行，后面会向后传递。
+
+这里还有个穿墙的问题要更改下，从一边出去会从另一边出来，这里改下节点的方向和位置就行了。
+
+### 食物闪烁
+食物的控制是通过counter对游戏刷新频率计数实现的，超过计数数量就移除食物，到达闪烁时间food内部的blingCounter进行计数，在我的设置里是0.5秒反转一下show，这样就出来了闪烁效果。
+
+### 位置摆放问题
+这里用的坐标都是中心坐标，所以和掩图的宽高有关，在生成位置的时候按中心位置去生成，在onDraw按掩图的宽高来摆放，让掩图中心放在位置上，最后出来的效果就比较好看了。
+
