--- a/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：小板弹球.md
+++ b/module_views/src/main/java/com/silencefly96/module_views/game/doc/安卓小游戏：小板弹球.md
@@ -1,5 +1,21 @@
-package com.silencefly96.module_views.game
+# 安卓小游戏：贪吃蛇
 
+### 前言
+这个是通过自定义View实现小游戏的第三篇，是小时候玩的那种五块钱的游戏机上的，和俄罗斯方块很像，小时候觉得很有意思，就模仿了一下。
+
+## 需求
+这里的逻辑就是板能把球弹起来，球在碰撞的时候能把顶部的目标打掉，当板没有挡住球，掉到了屏幕下面，游戏就结束了。核心思想如下：
+- 1，载入配置，读取游戏信息、配置及掩图
+- 2，启动游戏控制逻辑，球体碰到东西有反弹效果
+- 3，手势控制板的左右移动
+
+## 效果图
+效果图已经把游戏的逻辑玩出来了，大致就是这么个玩法，就是我感觉这不像一个游戏，因为小球的初始方向就决定了游戏结果，也许我应该把板的速度和球的方向结合起来，创造不一样。
+
+![ball](https://img-blog.csdnimg.cn/8d2eb9da2be544f5b7c6f43abd112572.gif#pic_center)
+
+## 代码
+```java
 import android.annotation.SuppressLint
 import android.app.AlertDialog
 import android.content.Context
@@ -378,3 +394,100 @@ class BombBallGameView @JvmOverloads constructor(
         mGameController.removeMessages(0)
     }
 }
+```
+对应style配置，这里rowNunb不能用了，和上个贪吃蛇游戏冲突了，不能用一样的名称。游戏数据的数组我也写在这里了，实际应该分开写的，但是小游戏而已，就这样吧！
+> res -> values -> bomb_ball_game_view_style.xml
+```xml
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+    <declare-styleable name="BombBallGameView">
+        <attr name="length" format="integer"/>
+        <attr name="row" format="integer"/>
+        <attr name="col" format="integer"/>
+        <attr name="ballMask" format="reference"/>
+        <attr name="targetMask" format="reference"/>
+        <attr name="targetConfig" format="reference"/>
+    </declare-styleable>
+    <string-array name="BombBallGameConfig">
+        <item>(0,5)</item>
+        <item>(0,6)</item>
+        <item>(0,7)</item>
+        <item>(0,8)</item>
+        <item>(0,9)</item>
+
+        <item>(0,10)</item>
+        <item>(0,11)</item>
+        <item>(0,12)</item>
+        <item>(0,13)</item>
+        <item>(0,14)</item>
+
+        <item>(1,3)</item>
+        <item>(1,5)</item>
+        <item>(1,7)</item>
+        <item>(1,9)</item>
+        <item>(1,11)</item>
+        <item>(1,13)</item>
+        <item>(1,15)</item>
+    </string-array>
+</resources>
+```
+掩图也还是从Android Studio里面的vector image来的，我觉得还阔以。
+> res -> drawable -> ic_circle.xml
+```xml
+<vector android:height="24dp" android:tint="#6F6A6A"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+</vector>
+```
+> res -> drawable -> ic_target.xml
+```xml
+<vector android:height="24dp" android:tint="#6F6A6A"
+    android:viewportHeight="24" android:viewportWidth="24"
+    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="@android:color/white" android:pathData="M12,2C6.48,2 2,6.48 2,12s4.48,10 10,10 10,-4.48 10,-10S17.52,2 12,2zM17,13h-4v4h-2v-4L7,13v-2h4L11,7h2v4h4v2z"/>
+</vector>
+```
+layout也说一下，前面都没写layout，这里用到了字符串数组，说下吧
+```xml
+    <com.silencefly96.module_views.game.BombBallGameView
+        android:id="@+id/gamaView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        app:ballMask="@drawable/ic_circle"
+        app:targetMask="@drawable/ic_target"
+        app:targetConfig="@array/BombBallGameConfig"
+        />
+```
+
+## 主要问题
+下面简单讲讲吧，主要结构和前面游戏没什么变化，就是游戏逻辑变得复杂了很多。
+
+### 资源加载
+和前面一样，资源加载就是从styleable配置里面读取设置，这里需要额外说明的就是目标的配置文件了。
+
+这里顶部目标是通过外部的配置文件来设置的，接受的是一个字符串数组的资源id，我这保存在下面：
+
+> res -> values -> bomb_ball_game_view_style.xml -> BombBallGameConfig
+
+结构是一个坐标，需要注意的是要配合row和col使用（行数和列数），第一个数字表示第几行，第二个数字表示第几列。
+```xml
+<item>(0,5)</item>
+```
+
+读取的时候是把行标和列标读到了Sprite的posX和posY里面，这里是错误的，当时在init读取的时候无法获得控件的宽高，所以暂时先存放下，在onMeasuer -> onSizeChanged得到宽高之后，在load中对数据进行处理，mTargetList（游戏操作的列表）和mTargetConfigList（原始数据列表）都保存的是读取到的配置对象，即使mTargetList清空了，配置对象不变，依然保存在mTargetConfigList，这里要分清，不然reload的时候再处理就大错特错了。
+
+### 板的移动
+这里叫板，实际是通过paint画出来的线，只是设置的strokeWidth比较粗而已。移动的时候在onTouchEvent的ACTION_MOVE事件中更新板的坐标，在onDraw会以它的坐标和长度绘制成“板”。
+
+### 球对四周的反弹
+球的数据保存在Sprite对象里面，里面保存了三个变量，坐标以及方向。球在四个边的反弹（板实际就是下边），类似光的反射，找到反射面以及反射的法线，再以法线对称就得到反射路线了。实际操作上，先获取入射方向与法线夹角的绝对值，对称到法线另一边，再旋转180度掉头，就能得到出射方向了。
+
+当然计算的时候要根据实际情况计算，尤其是0度和360度作为法线时。
+
+### 球和目标的碰撞时的反射
+球和目标的碰撞就不说了，很简单，计算下两个中心的距离就行了。这里说下碰撞后的反射问题，和上面在四周的反射类似，这里也是要通过反射面和法线来决定，实际上法线就是两个圆心的连线，而且小球和目标碰撞时，方向只会向上，所以取小球中心为起点，目标中心为中点，得到法线向量，再去计算角度就很简单了。
+
+### 球的初始随机方向问题
+球的初始随机方向我是想让它向上的，那应该生成哪个范围的角度呢？我们上学的时候X轴向右，Y轴向上，上半部分角度时[0, 180]，那这时候U轴向下了，角度范围呢？答案很简单了，就是[180, 360]，上面碰撞的代码实际是我以默认上半区为[0, 180]的时候写的，实际也无需修改，因为只是坐标轴对称了，逻辑并没对称。
