--- a/module_views/src/main/res/values/strings.xml
+++ b/module_views/src/main/res/values/strings.xml
@@ -25,6 +25,20 @@
     <string name="bomb_ball_game_fragment">飞机大战</string>
     <string name="tetris_game_fragment">俄罗斯方块</string>
 
+    <string name="widget_main_fragment">自定义widget</string>
+    <string name="drawable_view_fragment">手写签名</string>
+    <string name="draw_clear">清除</string>
+    <string name="draw_back">后退</string>
+    <string name="draw_forward">前进</string>
+    <string name="draw_output">导出</string>
+    <string name="draw_set">设置</string>
+    <string name="draw_output_hint">导出路径:</string>
+    <string name="draw_width">画笔粗细</string>
+    <string name="draw_stroke_color">画笔颜色</string>
+    <string name="draw_canvas_color">背景颜色</string>
+
+    <string name="lazy_image_view_fragment">懒加载图片</string>
+
     <string name="test_string">一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n</string>
     <string name="test_long_string">
         一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n
