--- a/module_views/src/main/res/values/strings.xml
+++ b/module_views/src/main/res/values/strings.xml
@@ -38,6 +38,8 @@
     <string name="draw_canvas_color">背景颜色</string>
 
     <string name="lazy_image_view_fragment">懒加载图片</string>
+    <string name="show_bing_pic">点击获取必应每日一图</string>
+    <string name="clear_pic">清除</string>
 
     <string name="test_string">一般情况下，getMeasuredWidth()和getWidth()获得的结果是一样的，但是如果在父布局的onLayout()方法或者此View的onDraw()方法里调用measure(0,0);(measure中的参数的值你自己可以定义)的话，两者的结果可能会不同。\n</string>
     <string name="test_long_string">
