--- a/module_hardware/src/main/res/values/strings.xml
+++ b/module_hardware/src/main/res/values/strings.xml
@@ -14,11 +14,15 @@
     <string name="start_scan">扫描</string>
     <string name="all">全部</string>
     <string name="send">send</string>
-    <string name="wait_client_connect">"等待客户端连接...\n"</string>
+    <string name="wait_client_connect">"等待客户端连接…\n"</string>
 
     <!--  相机模块  -->
     <string name="take_photo_by_system">前往系统拍照</string>
     <string name="pick_photo_by_system">前往相册选取</string>
+    <string name="enable_crop">开启裁切模式</string>
+    <string name="insert_photo_to_pictures">将bitmap插入到相册</string>
+    <string name="clear_Cache">清除缓存图片</string>
+    <string name="clear_this_pictures">清除应用图片</string>
     <string name="main_fragment">首页</string>
     <string name="take_photo_fragment">拍照</string>
 </resources>
