--- a/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班内学习计划.md
+++ b/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班内学习计划.md
@@ -1,12 +1,12 @@
 # --------上班班学习计划--------
-> 每周课时数，工作日: 2 ~ 6 * 5 = 16+，每周五提交
+> 每周课时数，工作日: 2 ~ 6 * 5 = 16+，每周一提交
 > 每月课时数: 16+ * 4 = 64+
 
 当前任务: Glide源码解析
 
 2023年      第一周   第二周   第三周   第四周   第五周
-八月         0       0       1       1      0
-九月         0       0       0       0      0
+八月         0       0       1       5      0
+九月         0       1      25       10     0
 十月         0       0       0       0      0
 十一         0       0       0       0      0
 十二         0       0       0       0      0
