--- a/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班外学习计划.md
+++ b/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班外学习计划.md
@@ -1,12 +1,12 @@
 # --------班外学习计划--------
-> 每周课时数，工作日: 2 * 5 = 10，周末: 4 * 2，总共: 18，每周五提交
+> 每周课时数，工作日: 2 * 5 = 10，周末: 4 * 2，总共: 18，每周一提交
 > 每月课时数: 18 * 4 = 72
 
 当前任务: 计算机组成原理
 
 2023年      第一周   第二周   第三周   第四周   第五周
 八月         0       0       0       0      0
-九月         0       0       0       0      0
+九月         0       0       6       0      0
 十月         0       0       0       0      0
 十一         0       0       0       0      0
 十二         0       0       0       0      0
