--- a/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班内学习计划.md
+++ b/module_mvvm/src/main/java/com/silencefly96/module_mvvm/plans/班内学习计划.md
@@ -20,7 +20,7 @@
     > 安卓开发艺术探讨: 第一章
     > 文章: Activity启动模式与栈的使用小结
     > 文章: 对 FLAG_ACTIVITY_NEW_TASK | FLAG_ACTIVITY_CLEAR_TOP 的实践
-- [ ] Drawable使用
+- [x] Drawable使用
 - [ ] Android动画
 - [ ] jetpack架构组件使用
 - [ ] 数据持久化: SP、MMKV、Sqlite、Room
@@ -50,36 +50,36 @@
 - [ ] view的事件体系
 - [ ] view的工作原理
 - [ ] IPC机制、Binder
-- [ ] RemoteViews
-- [ ] Window和WindowManager
+- [x] RemoteViews
+- [x] Window和WindowManager
 - [ ] 四大组件工作过程
 - [ ] Android消息机制
 - [ ] Android多线程
 - [ ] Bitmap加载及缓存
-- [ ] JNI及NDK编程
+- [x] JNI及NDK编程
 - [ ] 内存泄漏及性能优化、绘制优化
 - [ ] 架构MVC、MVP、MVVM、MVI
 
 ## --------深入部分--------
 - [ ] Framework层: AMS、PMS、IMS
 - [ ] 动态加载、热更新、热修复、多Dex处理
-- [ ] 模块化(buildsrc、VersionCatalog、ComposingBuild、NowInAndroid)
+- [x] 模块化(buildsrc、VersionCatalog、ComposingBuild、NowInAndroid)
 - [ ] 组件化、插件化、Hook技术
 - [ ] AOSP系统源码
-- [ ] Android系统启动过程
+- [x] Android系统启动过程
 - [ ] Dalvik和ART虚拟机
 
 ## --------扩展部分--------
-- [ ] 设计模式
+- [x] 设计模式
 - [ ] 反编译
 - [ ] 多渠道打包
-- [ ] HTTP、HTTPS、HTTP2.0
+- [x] HTTP、HTTPS、HTTP2.0
 - [ ] 代码规范
 - [ ] Git版本控制
 - [ ] 代码混淆
 - [ ] 单元测试、自动化测试
-- [ ] Gradle语法、插件，kts
-- [ ] ASM插桩技术
+- [x] Gradle语法、插件，kts
+- [x] ASM插桩技术
 - [ ] AOP思想、AspectJ框架、DiD Booster框架
 - [ ] 跨平台技术、Dart基础、Flutter基础
 - [ ] 音视频开发
