--- a/module_tech/src/main/res/values/strings.xml
+++ b/module_tech/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="dns_test_fragment">Glide扩展图片类型</string>
     <string name="activity_flag_fragment">测试Activity flag的使用</string>
     <string name="drawable_test_fragment">测试各种drawable效果</string>
+    <string name="animation_test_fragment">测试各种animation效果</string>
 
     <string name="activity_flag_button">点击跳转</string>
+    <string name="activity_animation_button">点击返回</string>
 </resources>
