--- a/module_tech/src/main/res/values/strings.xml
+++ b/module_tech/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="drawable_test_fragment">测试各种drawable效果</string>
     <string name="animation_test_fragment">测试各种animation效果</string>
     <string name="animator_test_fragment">测试各种animator效果</string>
+    <string name="vector_anim_test_fragment">测试vector anim效果</string>
+    <string name="remote_view_test_fragment">测试RemoteView效果</string>
 
     <string name="activity_flag_button">点击跳转</string>
     <string name="activity_animation_button">点击返回</string>
