改进飞蛋游戏，增加关卡选择喝辅助线

--- a/module_views/src/main/assets/安卓小游戏：小板弹球.md
+++ b/module_views/src/main/assets/安卓小游戏：小板弹球.md
@@ -451,7 +451,7 @@ class BombBallGameView @JvmOverloads constructor(
 layout也说一下，前面都没写layout，这里用到了字符串数组，说下吧
 ```xml
     <com.silencefly96.module_views.game.BombBallGameView
-        android:id="@+id/gamaView"
+        android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
