--- a/module_views/src/main/assets/安卓小游戏：俄罗斯方块.md
+++ b/module_views/src/main/assets/安卓小游戏：俄罗斯方块.md
@@ -549,7 +549,7 @@ class TetrisGameView @JvmOverloads constructor(
 layout布局
 ```xml
     <com.silencefly96.module_views.game.TetrisGameView
-        android:id="@+id/gamaView"
+        android:id="@+id/gameView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/black"
